Реализована кнопка для перехода на Кинопоиск

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="genres_format">Жанры: %1$s</string>
     <string name="no_genres">Жанры: отсутствуют</string>
     <string name="release_date">Дата выпуска: %s</string>
+    <string name="show_more">Подробнее...</string>
+    <string name="hide">Скрыть</string>
 </resources>
