--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,5 @@
     <string name="release_date">Дата выпуска: %s</string>
     <string name="show_more">Подробнее...</string>
     <string name="hide">Скрыть</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="edit_button">Изменить</string>
 </resources>
