Установки библиотеки не было, реализовано полностью окно с оценкой

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,7 @@
     <string name="year_range">%1$s - %2$s</string>
     <string name="year_from">С %1$s</string>
     <string name="year_to">До %1$s</string>
+    <string name="save_rating">Сохранить</string>
+    <string name="change_rating">Изменить оценку</string>
+    <string name="delete_rating">Удалить оценку</string>
 </resources>
