--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,4 +77,5 @@
     <string name="follow">Перейти</string>
     <string name="desc_voice">voice</string>
     <string name="test_number">0</string>
+    <string name="nothing_found">Ничего не найдено</string>
 </resources>
