--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,4 +78,5 @@
     <string name="desc_voice">voice</string>
     <string name="test_number">0</string>
     <string name="nothing_found">Ничего не найдено</string>
+    <string name="sort">Сортировка</string>
 </resources>
